Mengubah index.html, menambahkan bagian about dan portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -34,7 +34,7 @@
     <!-- Jumbotron Start  -->
     <div class="jumbotron jumbotron-fluid">
       <div class="container text-center">
-        <img src="img/profile1.png" alt="Profile Image" width="250" class="my-2">
+        <img src="img/profile1.png" alt="Profile Image" width="25%" class="mt-4 my-2">
         <h1 class="display-4">Bagoes Ihsan Taufiqurrahman</h1>
         <p class="lead">Selamat datang di website portfolio saya.</p>
       </div>
@@ -42,88 +42,161 @@
     <!-- Jumbotron End -->
 
     <!-- About Start -->
-    <div class="container">
-      <div class="row">
-        <div class="col text-center">
-          <h1> About </h1>
+    <section id="about" class="about">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center">
+            <h2> About </h2>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-5 text-justify my-4 px-4">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni est repellendus tempore, doloribus sed cum dolorum itaque repellat laboriosam quasi inventore officiis, debitis quos consequatur atque ut eveniet possimus obcaecati quaerat velit fuga numquam veritatis voluptates alias! Officia quis iure ullam suscipit. Dolore eveniet at tempora molestias, dicta magnam iure.
+            </p>
+          </div>
+          <div class="col-md-5 text-justify my-4 px-4">
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem fuga aperiam architecto nisi quas officiis illo voluptatem placeat. Repellat fugit odit libero exercitationem quis, reiciendis minima. Nihil repellat quaerat nam! Harum fugit voluptate atque optio quia expedita laborum sapiente quae assumenda est officiis doloremque dolorem, culpa, veniam blanditiis necessitatibus reiciendis.
+            </p>
+          </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col text-justify my-4 mx-2 p-2">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni est repellendus tempore, doloribus sed cum dolorum itaque repellat laboriosam quasi inventore officiis, debitis quos consequatur atque ut eveniet possimus obcaecati quaerat velit fuga numquam veritatis voluptates alias! Officia quis iure ullam suscipit. Dolore eveniet at tempora molestias, dicta magnam iure.
-          </p>
-        </div>
-        <div class="col text-justify my-4 mx-2 p-2">
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem fuga aperiam architecto nisi quas officiis illo voluptatem placeat. Repellat fugit odit libero exercitationem quis, reiciendis minima. Nihil repellat quaerat nam! Harum fugit voluptate atque optio quia expedita laborum sapiente quae assumenda est officiis doloremque dolorem, culpa, veniam blanditiis necessitatibus reiciendis.
-          </p>
-        </div>
-      </div>
-    </div>
+    </section>
     <!-- About End -->
 
     <!-- Portfolio Start -->
-    <div class="container">
-      <div class="row my-2">
-        <div class="col text-center">
-          <h1> My Portfolio </h1>
+    <section id="portfolio" class="portfolio bg-light pb-2">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center">
+            <h2 class="mt-4"> My Portfolio </h2>
+          </div>
+        </div>
+        <div class="row my-4">
+          <div class="col-md">
+            <div class="card">
+              <img src="img/thumbs/1.png" class="card-img-top" alt="Portfolio 1">
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md">
+            <div class="card">
+              <img src="img/thumbs/2.png" class="card-img-top" alt="Portfolio 1">
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md">
+            <div class="card">
+              <img src="img/thumbs/3.png" class="card-img-top" alt="Portfolio 1">
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row my-4">
+          <div class="col-md">
+            <div class="card">
+              <img src="img/thumbs/4.png" class="card-img-top" alt="Portfolio 1">
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md">
+            <div class="card">
+              <img src="img/thumbs/5.png" class="card-img-top" alt="Portfolio 1">
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md">
+            <div class="card">
+              <img src="img/thumbs/6.png" class="card-img-top" alt="Portfolio 1">
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="row my-2">
-        <div class="col-md">
-          <div class="card">
-            <img src="img/thumbs/1.png" class="card-img-top" alt="Portfolio 1">
-            <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md">
-          <div class="card">
-            <img src="img/thumbs/2.png" class="card-img-top" alt="Portfolio 1">
-            <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md">
-          <div class="card">
-            <img src="img/thumbs/3.png" class="card-img-top" alt="Portfolio 1">
-            <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row my-2">
-        <div class="col-md">
-          <div class="card">
-            <img src="img/thumbs/4.png" class="card-img-top" alt="Portfolio 1">
-            <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md">
-          <div class="card">
-            <img src="img/thumbs/5.png" class="card-img-top" alt="Portfolio 1">
-            <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md">
-          <div class="card">
-            <img src="img/thumbs/6.png" class="card-img-top" alt="Portfolio 1">
-            <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    </section>
     <!-- Portfolio End -->
+
+    <!-- Contact Start -->
+    <section id="cta" class="cta">
+      <div class="container">
+        <div class="row pt-4 mb-2">
+          <div class="col text-center">
+            <h2> Contact Us </h2>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-4">
+            <div class="card text-white bg-primary mb-3">
+              <div class="card-body">
+                <h5 class="card-title text-center">Contact Us</h5>
+                <p class="card-text text-justify">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+            <ul class="list-group">
+              <li class="list-group-item">
+                <h2> My Office </h2>
+              </li>
+              <li class="list-group-item">Perum Bumi Citra Fajar Sekawan Anggun V</li>
+              <li class="list-group-item">Blok D Nomor 18</li>
+              <li class="list-group-item">Bulusidokare, Sidoarjo, Jawa Timur</li>
+            </ul>
+          </div>
+          <div class="col-md-6">
+            <form>
+              <div class="form-group">
+                <label for="nama">Nama</label>
+                <input type="text" class="form-control" id="nama" placeholder="Masukkan nama anda ...">
+              </div>
+              <div class="form-group">
+                <label for="alamat">Alamat</label>
+                <input type="text" class="form-control" id="alamat" placeholder="Masukkan alamat anda ...">
+              </div>
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" class="form-control" id="email" placeholder="Masukkan email anda ...">
+              </div>
+              <div class="form-group">
+                <label for="notelp">No. Telp</label>
+                <input type="text" class="form-control" id="notelp" placeholder="Masukkan nomor telepon anda ...">
+              </div>
+              <div class="form-group">
+                <label for="pesan">Pesan</label>
+                <textarea name="pesan" id="pesan" class="form-control"></textarea>
+              </div>
+              <div class="form-group">
+                <button class="btn btn-primary"> Kirim </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Contact End -->
+
+    <!-- Footer Start -->
+    <footer id="footer" class="footer bg-dark text-white p-2">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col">
+            <h5 class="mt-2"> Copyright&copy; 2020 </h5>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- Footer End -->
 
 
     <!-- Optional JavaScript -->
