--- a/company_profile/index.html
+++ b/company_profile/index.html
@@ -7,13 +7,50 @@
       <!--Import materialize.css-->
       <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 
+      <!-- Title -->
+      <title> My Portfolio </title>
+
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
     <body>
 
+        <!-- Navbar Start -->
+        <div class="navbar-fixed">
+            <nav class="indigo darken-2">
+                <div class="container">
+                    <div class="nav-wrapper">
+                        <a href="#!" class="brand-logo">GWC</a>
+                        <a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+                        <ul class="right hide-on-med-and-down">
+                            <li><a href="">About Us</a></li>
+                            <li><a href="">Clients</a></li>
+                            <li><a href="">Services</a></li>
+                            <li><a href="">Portfolio</a></li>
+                            <li><a href="">Contact Us</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
+        <!-- Navbar End -->
+
+        <!-- Sidenav Start -->
+        <ul id="mobile-nav" class="sidenav">
+            <li><a href="">About Us</a></li>
+            <li><a href="">Clients</a></li>
+            <li><a href="">Services</a></li>
+            <li><a href="">Portfolio</a></li>
+            <li><a href="">Contact Us</a></li>
+        </ul>
+        <!-- Sidenav End -->
+
       <!--JavaScript at end of body for optimized loading-->
       <script type="text/javascript" src="js/materialize.min.js"></script>
+      <script>
+          const sideNav = document.querySelectorAll('.sidenav');
+          M.Sidenav.init(sideNav);
+      </script>
     </body>
   </html>
