--- a/company_profile/index.html
+++ b/company_profile/index.html
@@ -6,6 +6,7 @@
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
       <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+      <link type="text/css" rel="stylesheet" href="css/style.css">
 
       <!-- Title -->
       <title> My Portfolio </title>
@@ -46,11 +47,88 @@
         </ul>
         <!-- Sidenav End -->
 
+        <!-- Slider Start -->
+        <div class="slider">
+            <ul class="slides">
+              <li>
+                <img src="img/slider/1.png"> <!-- random image -->
+                <div class="caption left-align">
+                  <h3>This is our big Tagline!</h3>
+                  <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                </div>
+              </li>
+              <li>
+                <img src="img/slider/2.png"> <!-- random image -->
+                <div class="caption right-align">
+                  <h3>This is our big Tagline!</h3>
+                  <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                </div>
+              </li>
+              <li>
+                <img src="img/slider/3.png"> <!-- random image -->
+                <div class="caption center-align">
+                  <h3>This is our big Tagline!</h3>
+                  <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                </div>
+              </li>
+            </ul>
+        </div>
+        <!-- Slider End -->
+
+        <!-- Section About Start -->
+        <section id="about" class="about">
+            <div class="container">
+                <div class="row">
+                    <h3 class="center light grey-text text-darken-3"> About Us </h3>
+                    <div class="col m6 light">
+                        <h5> We Are Professionals </h5>
+                        <p class="justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur amet odio quibusdam alias impedit eius accusamus, doloremque facilis facere iure porro, nisi expedita, saepe consequuntur voluptatibus nam reiciendis. Molestiae, illo.</p>
+                    </div>
+                    <div class="col m6 light">
+                        <p> WEB DEVELOPMENT </p>
+                        <div class="progress">
+                            <div class="determinate" style="width: 50%"></div>
+                        </div>
+                        <p> MOBILE APP DEVELOPMENT </p>
+                        <div class="progress">
+                            <div class="determinate" style="width: 80%"></div>
+                        </div>
+                        <p> DESKTOP APP DEVELOPMENT </p>
+                        <div class="progress">
+                            <div class="determinate" style="width: 80%"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Section About End -->
+
+        <!-- Clients Start -->
+        <div class="parallax-container">
+            <div class="parallax"><img src="img/slider/4.png"></div>
+        </div>
+        <!-- Clients End -->
+
       <!--JavaScript at end of body for optimized loading-->
       <script type="text/javascript" src="js/materialize.min.js"></script>
       <script>
-          const sideNav = document.querySelectorAll('.sidenav');
-          M.Sidenav.init(sideNav);
+
+        //Sidebar
+        const sideNav = document.querySelectorAll('.sidenav');
+        M.Sidenav.init(sideNav);
+
+        //Slider
+        const slider = document.querySelectorAll('.slider');
+        M.Slider.init(slider, {
+            indicators: false,
+            interval: 3000
+        });
+
+        //Parallax
+        const parallax = document.querySelectorAll('.parallax');
+        M.Parallax.init(parallax);
+
+
       </script>
     </body>
   </html>
