--- a/company_profile/index.html
+++ b/company_profile/index.html
@@ -106,6 +106,22 @@
         <!-- Clients Start -->
         <div class="parallax-container">
             <div class="parallax"><img src="img/slider/4.png"></div>
+
+            <div class="container">
+                <h3 class="light white-text center clients"> Our Clients </h3>
+                <div class="row clients-image">
+                    <div class="col m4 s12 center">
+                        <img src="img/clients/gojek.png" alt="">
+                    </div>
+                    <div class="col m4 s12 center">
+                        <img src="img/clients/tokopedia.png" alt="">
+                    </div>
+                    <div class="col m4 s12 center">
+                        <img src="img/clients/traveloka.png" alt="">
+                    </div>
+                </div>
+            </div>
+
         </div>
         <!-- Clients End -->
 
