--- a/company_profile/index.html
+++ b/company_profile/index.html
@@ -198,6 +198,61 @@
         </section>
         <!-- Portfolio End -->
 
+        <!-- Contact Us Start -->
+        <section id="cta" class="cta grey lighten-4">
+            <div class="container">
+                <h3 class="light center grey-text text-darken-3"> Contact Us </h3>
+                <div class="row">
+                    <div class="col m5 s12">
+                        <div class="card-panel blue darken-2 center">
+                            <i class="material-icons white-text">email</i>
+                            <h5 class="white-text"> Contact Us </h5>
+                            <p class="white-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, quaerat!
+                            </p>
+                        </div>
+                        <ul class="collection with-header">
+                            <li class="collection-header">
+                                <h4 class="light center"> Our Office </h4>
+                                <li class="collection-item"> Perum BCF V Sekawan Anggun </li>
+                                <li class="collection-item"> Blok D No. 18 </li>
+                                <li class="collection-item"> Bulusidokare (68126), Jawa Timur </li>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col m7 s12">
+                        <form>
+                            <div class="card-panel">
+                                <h5 class="light"> Please fill out this form </h5>
+                                <div class="input-field">
+                                    <input type="text" name="nama" id="nama">
+                                    <label for="nama">Nama</label>
+                                </div>
+                                <div class="input-field">
+                                    <input type="text" name="alamat" id="alamat">
+                                    <label for="alamat">Alamat</label>
+                                </div>
+                                <div class="input-field">
+                                    <input type="text" name="notelp" id="notelp">
+                                    <label for="notelp">No. Telp</label>
+                                </div>
+                                <div class="input-field">
+                                    <input type="email" name="email" id="email">
+                                    <label for="email">Email</label>
+                                </div>
+                                <div class="input-field">
+                                    <textarea name="pesan" id="pesan"class="materialize-textarea"></textarea>
+                                    <label for="pesan">Pesan</label>
+                                </div>
+                                <button type="submit" class="btn blue darken-2"> Submit </button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Contact Us End -->
+
       <!--JavaScript at end of body for optimized loading-->
       <script type="text/javascript" src="js/materialize.min.js"></script>
       <script>
