--- a/company_profile/index.html
+++ b/company_profile/index.html
@@ -15,21 +15,21 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
-    <body>
+    <body id="home" class="scrollspy">
 
         <!-- Navbar Start -->
         <div class="navbar-fixed">
             <nav class="indigo darken-2">
                 <div class="container">
                     <div class="nav-wrapper">
-                        <a href="#!" class="brand-logo">GWC</a>
+                        <a href="#home" class="brand-logo">GWC</a>
                         <a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                         <ul class="right hide-on-med-and-down">
-                            <li><a href="">About Us</a></li>
-                            <li><a href="">Clients</a></li>
-                            <li><a href="">Services</a></li>
-                            <li><a href="">Portfolio</a></li>
-                            <li><a href="">Contact Us</a></li>
+                            <li><a href="#about">About Us</a></li>
+                            <li><a href="#clients">Clients</a></li>
+                            <li><a href="#service">Services</a></li>
+                            <li><a href="#portfolio">Portfolio</a></li>
+                            <li><a href="#cta">Contact Us</a></li>
                         </ul>
                     </div>
                 </div>
@@ -39,11 +39,11 @@
 
         <!-- Sidenav Start -->
         <ul id="mobile-nav" class="sidenav">
-            <li><a href="">About Us</a></li>
-            <li><a href="">Clients</a></li>
-            <li><a href="">Services</a></li>
-            <li><a href="">Portfolio</a></li>
-            <li><a href="">Contact Us</a></li>
+            <li><a href="#about">About Us</a></li>
+            <li><a href="#clients">Clients</a></li>
+            <li><a href="#service">Services</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#cta">Contact Us</a></li>
         </ul>
         <!-- Sidenav End -->
 
@@ -76,7 +76,7 @@
         <!-- Slider End -->
 
         <!-- Section About Start -->
-        <section id="about" class="about">
+        <section id="about" class="about scrollspy">
             <div class="container">
                 <div class="row">
                     <h3 class="center light grey-text text-darken-3"> About Us </h3>
@@ -104,7 +104,7 @@
         <!-- Section About End -->
 
         <!-- Clients Start -->
-        <div class="parallax-container">
+        <div id="clients" class="parallax-container scrollspy">
             <div class="parallax"><img src="img/slider/4.png"></div>
 
             <div class="container">
@@ -126,7 +126,7 @@
         <!-- Clients End -->
 
         <!-- Services Start -->
-        <section id="service" class="service grey lighten-4">
+        <section id="service" class="service grey lighten-4 scrollspy">
            <div class="container">
                 <div class="row">
                     <h3 class="light center grey-text text-darken-3"> Our Services </h3>
@@ -163,7 +163,7 @@
         <!-- Services End -->
 
         <!-- Portfolio Start -->
-        <section id="portfolio" class="portfolio">
+        <section id="portfolio" class="portfolio scrollspy">
             <div class="container">
                 <h3 class="light center grey-text text-darken-3"> Portfolio </h3>
                 <div class="row">
@@ -199,7 +199,7 @@
         <!-- Portfolio End -->
 
         <!-- Contact Us Start -->
-        <section id="cta" class="cta grey lighten-4">
+        <section id="cta" class="cta grey lighten-4 scrollspy">
             <div class="container">
                 <h3 class="light center grey-text text-darken-3"> Contact Us </h3>
                 <div class="row">
@@ -253,6 +253,14 @@
         </section>
         <!-- Contact Us End -->
 
+        <!-- Footer Start -->
+        <footer id="footer" class="footer blue darken-2">
+            <div class="container">
+                <p class="white-text center flow-text">Copyright&copy; 2019 Bagoes IT</p>
+            </div>
+        </footer>
+        <!-- Footer End -->
+
       <!--JavaScript at end of body for optimized loading-->
       <script type="text/javascript" src="js/materialize.min.js"></script>
       <script>
@@ -276,6 +284,11 @@
         const materialbox = document.querySelectorAll('.materialboxed');
         M.Materialbox.init(materialbox);
 
+        // Scrollspy
+        const scrollspy = document.querySelectorAll('.scrollspy');
+        M.ScrollSpy.init(scrollspy,{
+            scrollOffset: 50
+        });
 
       </script>
     </body>
