Info Panel Finishing

--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -46,6 +46,36 @@
       </div>
     </div>
     <!-- Jumbotron End -->
+    
+    <!-- Container Start -->
+    <div class="container">
+      
+      <!-- Info Panel Start -->
+      <div class="row justify-content-center">
+        <div class="col-10 info-panel">
+          <div class="row">
+            <div class="col-lg my-2">
+              <img src="img/employee.png" alt="Employee" class="float-left">
+              <h4> 24 Hours </h4>
+              <p> Lorem ipsum dolor sit amet. </p>
+            </div>
+            <div class="col-lg my-2">
+              <img src="img/hires.png" alt="Hires" class="float-left">
+              <h4> High-Res</h4>
+              <p> Lorem ipsum dolor sit amet. </p>
+            </div>
+            <div class="col-lg my-2">
+              <img src="img/security.png" alt="Security" class="float-left">
+              <h4> Security </h4>
+              <p> Lorem ipsum dolor sit amet. </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Info Panel End -->
+
+    </div>
+    <!-- Container End -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
