Preparation Workingspace Section

--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -74,6 +74,10 @@
       </div>
       <!-- Info Panel End -->
 
+      <!-- Workingspace Start -->
+      
+      <!-- Workingspace End -->
+
     </div>
     <!-- Container End -->
 
