Workingspace Section Finished

--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -75,7 +75,18 @@
       <!-- Info Panel End -->
 
       <!-- Workingspace Start -->
-      
+      <div class="row workingspace justify-content-center">
+        <div class="col-lg-6">
+          <img src="img/workingspace.png" alt="Workingspace" class="img-fluid">
+        </div>
+        <div class="col-lg-5">
+          <h3> You <span>work</span> like <br> at <span>home</span> </h3>
+          <p>
+            Bekerja dengan suasana hati yang lebih asik dan mempelajari hal baru setiap harinya.
+          </p>
+          <a href="" class="btn btn-primary tombol"> Gallery </a>
+        </div>
+      </div>      
       <!-- Workingspace End -->
 
     </div>
